--- a/gallery.html
+++ b/gallery.html
@@ -453,9 +453,7 @@
                 </p>
               </div>
               <!-- Footer Logo -->
-              <div class="footer-logo">
-                <a href="#"><img src="img/core-img/logo2.png" alt="" /></a>
-              </div>
+              <div class="footer-logo"></div>
               <!-- Social Info -->
               <div class="social-info">
                 <a href="#"><i class="ti-facebook" aria-hidden="true"></i></a>
